correct  wrap to page 2

--- a/style02.css
+++ b/style02.css
@@ -352,7 +352,6 @@ div.step-name5 p {
 } */
 
 main a {
-    margin-left: 260px;
     text-decoration: none;
 }
 
